@@ -1,0 +1,9 @@
+Title: new filter host auxiliary tags
+Level: 1
+Component: multisite
+Compatible: compat
+Version: 1.4.0i3
+Date: 1480085074
+Class: feature
+
+
